--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./public/assets/counter.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="./public/css/style.css" />
+    <link rel="shortcut icon" href="./src/public/assets/counter.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./src/public/css/style.css" />
     <title>Counter</title>
   </head>
   <body>
@@ -37,5 +37,5 @@
       </div>
     </main>
   </body>
-  <script src="./public/js/main.js"></script>
+  <script src="./src/public/js/main.js"></script>
 </html>
